#
# Makefile.am
#
# Written by: Francesco Salvestrini <f DOT salvestrini AT nextworks DOT it>
#

nobase_pkginclude_HEADERS =			\
	librina.h				\
	librina-common.h			\
	librina-application.h			\
	librina-ipc-manager.h			\
	librina-ipc-process.h			\
	librina-faux-sockets.h			\
	librina-cdap.h				\
	librina-sdu-protection.h		\
	patterns.h				\
	exceptions.h				\
	concurrency.h
